--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
-    "slackbots": "^1.3.0"
+    "slackbots": "oxo-yuta/slack-bot-api.git#publish-emojis"
   }
 }
