--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "path": "^0.12.7",
     "slackbots": "oxo-yuta/slack-bot-api.git#publish-emojis"
   }
 }
