--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "slackbots": "oxo-yuta/slack-bot-api.git#publish-emojis"
   }
